--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,36 +1,49 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: unfurlyco # Your GitHub organization or username, where this repository lives
+repo: uptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
-    port: 80
-    check: "tcp-ping"
-    ipv6: true
+  - name: Unfur.ly Landing Page
+    url: https://unfur.ly/app/version
+  - name: Unfur.ly App Login
+    url: https://unfur.ly/app/login
+  - name: Unfur.ly API
+    url: https://unfur.ly/api/ui/info
+  - name: Unfur.ly Redirector
+    url: https://unfur.ly/version
+  - name: Unfur.ly Free/Demo Tier Test
+    url: https://unfur.ly/freetier
+    expectedStatusCodes:
+      - 302
+      - 200
+  - name: Unfur.ly Paid Tier Test
+    expectedStatusCodes:
+      - 302
+      - 200
+  - name: Unfur.ly GeoFurl Test
+    url: https://unfur.ly/BeastGames
+    expectedStatusCodes:
+      - 302
+      - 200
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  cname: status.unfur.ly
   # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  logoUrl: https://unfur.ly/app/project/images/Unfurly_512.png
+  name: Unfur.ly
+  introTitle: "**Unfur.ly Status Page**"
+  introMessage: |
+    Welcome to the Unfur.ly status page. Here, you can find the current status of our link-shortening service and any ongoing incidents or maintenance events. 
+    We strive to ensure maximum uptime and performance for our users. If you're experiencing issues, please [contact our support team](https://unfur.ly/support).
   navbar:
     - title: Status
       href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
-
+    - title: Documentation
+      href: https://unfur.ly/docs
+    - title: Support
+      href: https://unfur.ly/support
+      
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
