--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -33,10 +33,10 @@ status-website:
   cname: status.unfur.ly
   # baseUrl: /your-repo-name
   logoUrl: https://unfur.ly/app/project/images/Unfurly_512.png
-  name: Unfur.ly
+  name: " "
   introTitle: "**Unfur.ly Status Page**"
   introMessage: |
-    Welcome to the Unfur.ly status page. Here, you can find the current status of our link-shortening service and any ongoing incidents or maintenance events. 
+    Welcome to the **_Unfur.ly_** status page. Here, you can find the current status of our link-shortening service and any ongoing incidents or maintenance events. 
     We strive to ensure maximum uptime and performance for our users. If you're experiencing issues, please [contact our support team](https://unfur.ly/support).
   navbar:
     - title: Status
