--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -28,7 +28,9 @@ sites:
       - 200
 
 status-website:
-  theme: ocean
+  themeUrl: https://status.unfur.ly/unfurly-blue.css
+  favicon: https://unfur.ly/app/favicon-96x96.png
+  faviconSvg: https://unfur.ly/app/favicon.svg
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status.unfur.ly
