--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -40,6 +40,8 @@ status-website:
     Welcome to the **_Unfur.ly_** status page. Here, you can find the current status of our link-shortening service and any ongoing incidents or maintenance events. 
     We strive to ensure maximum uptime and performance for our users. If you're experiencing issues, please [contact our support team](https://unfur.ly/support).
   navbar:
+    - title: Home
+      href: https://unfur.ly
     - title: Status
       href: /
     - title: Documentation
